# tdo-core

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
src/: error.rs  legacy.rs  lib.rs  list.rs  storage.rs  tdo.rs  todo.rs
tests/: done_remove.rs  github.rs  list.rs  list_counter.rs  load_save.rs  versioning.rs
tests/versions/: version01.json
