[package]
name = "tdo-core"
version = "0.2.2"
authors = ["Felix Döring <development@felixdoering.com>", "Felix Wittwer <dev@felixwittwer.de>"]
description = "The core of every Rust-based tdo application"

homepage = "https://tdolist.de/tdo"
repository = "https://github.com/tdolist/tdo-core"
documentation = "https://docs.rs/crate/tdo-core"

license = "MIT"
keywords = ["todo", "tdo", "tdolist", "terminal"]
readme = "README.md"

include = [".gitignore", ".travis.yml", "Cargo.toml", "tests/*", "src/*.rs"]

[dependencies]
json = "0.11"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
error-chain = "0.12"
